<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <ImageView 
        android:layout_margin="10dp"
        android:layout_gravity="center"
        android:id="@+id/imageview_dialog_camera"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />
    
   <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
                <TextView
            android:id="@+id/button_dialog_camerasetting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/camera_filepath"
            android:textColor="@color/blue_background"
            />
        <TextView 
            android:id="@+id/textview_dialog_camerapath"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
       
    </LinearLayout>
    
		<RelativeLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    >

		    <Button
		        android:id="@+id/button_dialog_cameradismiss"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignParentRight="true"
		        android:layout_alignParentTop="true"
		        android:layout_marginRight="72dp"
		        android:text="@string/cancel" />

		    <Button
		        android:id="@+id/button_dialog_cameraupload"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignParentTop="true"
		        android:layout_marginRight="48dp"
		        android:layout_toLeftOf="@+id/button_dialog_cameradismiss"
		        android:text="@string/upload_list_item_listener_upload" />
		    
		</RelativeLayout>
    
    
</LinearLayout>
