<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:id="@+id/aboutLinear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="@dimen/LogoSize"
            android:layout_height="@dimen/LogoSize"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/MainLogoSize"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/Greyer"
            android:layout_marginTop="@dimen/marginBig"
            android:text="@string/version"
            android:textSize="@dimen/textSize" />
    </LinearLayout>
    
    <ImageView
        android:layout_width="@dimen/CodeSize"
        android:layout_height="@dimen/CodeSize"
        android:src="@mipmap/code"
        android:layout_below="@+id/aboutLinear"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/MainLogoSize"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/marginBiggest"
        android:text="@string/homenet"
        android:textColor="@color/Greyer"
        android:textSize="@dimen/textSize" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView3"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/x120"
        android:text="@string/homename"
        android:textColor="@color/Greyer"
        android:textSize="@dimen/textSize" />


</RelativeLayout>